# CPP_Template

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists.txt_qt  GEMINI.md  README copy.md  README.md  create_appimage.sh_qt
.github/actions/doctoc/: action.yml
.github/actions/toc-action/: insert-toc.js  insert_toc.py  package.json
.github/workflows/: depdiscover.yml  depdiscover.yml_  gh_docs_bot.yml  gh_docs_bot.yml_  quality_security.yml_qt  repo-create_doctoc_md.yml  toc.yml
HowTo/: link.html  test.html
assets/css/: fluid.css
configure/: rz_config.hpp.in
docs/: index.md
docs/HowTo/: link.md  test.md
ghp_build/templates/: fluid_template.html
ghp_build/theme/blue/: blue.cfg
ghp_build/theme/blue/assets/css/: main.css
ghp_build/theme/fluid/assets/css/: fluid.css
ghp_build/theme/matrix/assets/css/: main.css
include/: rz_config.hpp
public/: index.html  search.json  sitemap.xml
public/HowTo/: index.html  test.html
src/: main.cpp
